Add progress bar

--- a/src/main/resources/com/gerywahyu/MainMenu.fxml
+++ b/src/main/resources/com/gerywahyu/MainMenu.fxml
@@ -5,14 +5,15 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
 <GridPane xmlns="http://javafx.com/javafx/8.0.232" xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="com.gerywahyu.controller.MainMenu" alignment="center"
-        hgap="10" vgap="10" maxWidth="Infinity" prefWidth="Infinity">
+          fx:controller="com.gerywahyu.controller.MainMenu" alignment="center"
+          hgap="10" vgap="10" maxWidth="Infinity" prefWidth="Infinity">
     <padding><Insets bottom="10"/></padding>
 
     <ListView fx:id="addedFiles" maxWidth="Infinity" prefWidth="Infinity"
             GridPane.columnIndex="0" GridPane.rowIndex="0"
-            GridPane.columnSpan="2" GridPane.halignment="RIGHT">
+            GridPane.columnSpan="3" GridPane.halignment="RIGHT">
     </ListView>
 
     <HBox   GridPane.columnIndex="0" GridPane.rowIndex="1"
@@ -29,11 +30,14 @@
         </GridPane.margin>
     </HBox>
 
+    <ProgressBar fx:id="progressBar" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS"
+                 GridPane.columnIndex="1" GridPane.rowIndex="1">
 
+    </ProgressBar>
 
     <Button fx:id="saveFileButton" defaultButton="true"
             text="Save" prefWidth="100" prefHeight="30"
-            GridPane.columnIndex="1" GridPane.rowIndex="1"
+            GridPane.columnIndex="2" GridPane.rowIndex="1"
             GridPane.halignment="RIGHT" onAction="#handleSaveFileButton">
         <GridPane.margin>
             <Insets top="10" bottom="10" right="20" />
